--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,8 +148,8 @@ jobs:
   - script: |
       brew update
       brew install gcc
-      make TARGET=CORE2 DYNAMIC_ARCH=1 USE_OPENMP=1 INTERFACE64=1 CC=gcc-12 FC=gfortran-12 DYNAMIC_LIST="NEHALEM HASWELL SKYlAKEX"
-      make TARGET=CORE2 DYNAMIC_ARCH=1 USE_OPENMP=1 INTERFACE64=1 CC=gcc-12 FC=gfortran-12 DYNAMIC_LIST="NEHALEM HASWELL SKYLAKEX" PREFIX=../blasinst install
+      make TARGET=CORE2 DYNAMIC_ARCH=1 USE_OPENMP=1 INTERFACE64=1 CC=gcc-12 FC=gfortran-12 DYNAMIC_LIST="NEHALEM HASWELL"
+      make TARGET=CORE2 DYNAMIC_ARCH=1 USE_OPENMP=1 INTERFACE64=1 CC=gcc-12 FC=gfortran-12 DYNAMIC_LIST="NEHALEM HASWELL" PREFIX=../blasinst install
       ls -lR ../blasinst
      
 - job: OSX_GCC_Nothreads
