--- a/.github/workflows/loongarch64.yml
+++ b/.github/workflows/loongarch64.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Test compiler
         run: |
           ccache ${{ matrix.triple }}-gcc -static -mabi=lp64d -c cpuid_loongarch64.c -o /dev/null && echo "lp64d supported"
-          ./c_check mak conf ccache ${{ matrix.triple }}-gcc ccache ${{ matrix.triple }}-gfortran
+          ./c_check mak conf ${{ matrix.triple }}-gcc  ${{ matrix.triple }}-gfortran
       - name: 'Upload generated makefile.conf'
         uses: actions/upload-artifact@v4
         with:
