--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,13 +4,21 @@ option('build_lapack_deprecated', type: 'boolean', value: true, description: 'Wh
 option('build_testing', type: 'boolean', value: true, description: 'Build LAPACK testsuite when building LAPACK')
 option('use_c_lapack', type: 'boolean', value: false, description: 'Build LAPACK from C sources instead of the original Fortran')
 option('build_without_cblas', type: 'boolean', value: false, description: 'Do not build the C interface (CBLAS) to the BLAS functions')
-option('use_locking', type: 'boolean', value: false, description: 'Use locks even in single-threaded builds to make them callable from multiple threads')
 option('use_perl', type: 'boolean', value: false, description: 'Use the older PERL scripts for build preparation instead of universal shell scripts')
 option('no_warmup', type: 'boolean', value: true, description: 'Do not run a benchmark on each startup just to find the best location for the memory buffer')
 option('no_affinity', type: 'boolean', value: true, description: 'Disable support for CPU affinity masks to avoid binding processes from e.g. R or numpy/scipy to a single core')
 option('build_cpp_thread_safety_test', type: 'boolean', value: false, description: 'Run a massively parallel DGEMM test to confirm thread safety of the library (requires OpenMP and about 1.3GB of RAM)')
 option('build_cpp_thread_safety_gemv', type: 'boolean', value: false, description: 'Run a massively parallel DGEMV test to confirm thread safety of the library (requires OpenMP)')
 option('build_static_libs', type: 'boolean', value: false, description: 'Build static library')
+# Parallel options
+option('num_cores', type: 'integer',
+       min: 1, value: 1, description: 'Number of CPUs')
+option('num_parallel', type: 'integer',
+       min: 1, value: 1, description: 'Max CPU')
+option('num_threads', type: 'integer',
+       min: 1, value: 12, description: 'Max threads')
+option('use_locking', type: 'boolean', value: false,
+       description: 'Use locks even in single-threaded builds to make them callable from multiple threads')
 
 # From Makefile
 option('dynamic_arch', type: 'boolean', value: false, description: 'Include support for multiple CPU targets, with automatic selection at runtime (x86/x86_64, aarch64 or ppc only)')
